# jphme.github.io

./: .gitignore  CLAUDE.md  CNAME  README.md  generate_thumbnails.py  generate_thumbnails.sh  index.html  keybase.txt  pyproject.toml  robots.txt  sitemap.xml
essays/a-country-full-of-geniuses/: index.html
